Opened 14 years ago

Closed 14 years ago

#1142 closed defect (fixed)

xbm: fail to decode

Reported by: ami_stuff Owned by:
Priority: normal Component: undetermined
Version: git-master Keywords: xbm
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

decodes correctly with ImageMagick

C:\>ffmpeg -i test.xbm out.bmp
ffmpeg version N-39339-ga0340df Copyright (c) 2000-2012 the FFmpeg developers
  built on Mar 28 2012 02:25:58 with gcc 4.5.0 20100414 (Fedora MinGW 4.5.0-1.fc
14)
  configuration: --prefix=/var/www/users/research/ffmpeg/snapshots/build --arch=
x86 --target-os=mingw32 --cross-prefix=i686-pc-mingw32- --cc='ccache i686-pc-min
gw32-gcc' --enable-w32threads --enable-memalign-hack --enable-runtime-cpudetect
--enable-cross-compile --enable-static --disable-shared --extra-libs='-lws2_32 -
lwinmm' --extra-cflags='--static -I/var/www/users/research/ffmpeg/snapshots/buil
d/include' --extra-ldflags='-static -L/var/www/users/research/ffmpeg/snapshots/b
uild/lib' --enable-bzlib --enable-zlib --enable-gpl --enable-version3 --enable-n
onfree --enable-libx264 --enable-libspeex --enable-libtheora --enable-libvorbis
--enable-libfaac --enable-libxvid --enable-libopencore-amrnb --enable-libopencor
e-amrwb --enable-libmp3lame --enable-libvpx --disable-decoder=libvpx
  libavutil      51. 44.100 / 51. 44.100
  libavcodec     54. 12.100 / 54. 12.100
  libavformat    54.  3.100 / 54.  3.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 66.100 /  2. 66.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 10.100 /  0. 10.100
  libpostproc    52.  0.100 / 52.  0.100
Input #0, image2, from 'test.xbm':
  Duration: 00:00:00.04, start: 0.000000, bitrate: N/A
    Stream #0:0: Video: xbm, monow, 1024x768, 25 tbr, 25 tbn, 25 tbc
Incompatible pixel format 'monow' for codec 'bmp', auto-selecting format 'monob'

[buffer @ 0x1db1a40] w:1024 h:768 pixfmt:monow tb:1/1000000 sar:0/1 sws_param:
[buffersink @ 0x1db1cc0] auto-inserting filter 'auto-inserted scale 0' between t
he filter 'src' and the filter 'out'
[scale @ 0x1db1240] w:1024 h:768 fmt:monow sar:0/1 -> w:1024 h:768 fmt:monob sar
:0/1 flags:0x4
Output #0, image2, to 'out.bmp':
  Metadata:
    encoder         : Lavf54.3.100
    Stream #0:0: Video: bmp, monob, 1024x768, q=2-31, 200 kb/s, 90k tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (xbm -> bmp)
Press [q] to stop, [?] for help
Error while decoding stream #0:0
frame=    0 fps=0.0 q=0.0 Lsize=       0kB time=00:00:00.00 bitrate=   0.0kbits/
s
video:0kB audio:0kB global headers:0kB muxing overhead nan%
Output file is empty, nothing was encoded (check -ss / -t / -frames parameters i
f used)

Attachments (2)

test.xbm (576.8 KB ) - added by ami_stuff 14 years ago.
1.xbm (576.8 KB ) - added by ami_stuff 14 years ago.

Download all attachments as: .zip

Change History (6)

by ami_stuff, 14 years ago

Attachment: test.xbm added

comment:1 by Carl Eugen Hoyos, 14 years ago

Keywords: xbm added
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

comment:2 by ami_stuff, 14 years ago

attached another sample

by ami_stuff, 14 years ago

Attachment: 1.xbm added

comment:3 by reimar, 14 years ago

This is due to the variable name containing an x. Patch sent.

comment:4 by reimar, 14 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.