xbmdec: fix decoding when variable name contains an 'x'.

Fixes trac ticket #1142.

Signed-off-by: Reimar Döffinger <Reimar.Doeffinger@gmx.de>